<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:padding="8dp">
	<!--android:layout_height="?android:attr/listPreferredItemHeight"-->

	<RelativeLayout
		android:id="@+id/question_layout"
		android:layout_width="wrap_content"
		android:layout_height="?android:attr/listPreferredItemHeight"
		android:layout_alignParentTop="true">

		<TextView
			android:id="@+id/question_id"
			android:layout_width="wrap_content"
			android:layout_height="0dp"
			android:layout_alignTop="@id/play_button"
			android:layout_alignBottom="@id/play_button"
			android:layout_alignParentStart="true"
			android:layout_centerVertical="true"
			android:layout_gravity="center_vertical"
			android:gravity="center"
			android:textSize="30sp"
			tools:text="1234" />

		<ImageButton
			android:id="@+id/play_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_marginStart="8dp"
			android:layout_toEndOf="@id/question_id"
			android:contentDescription="@string/play"
			android:padding="8dp"
			android:src="@drawable/ic_play_arrow_indigo_500_36dp"
			android:text="@string/play" />

		<ProgressBar
			android:id="@+id/play_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignStart="@id/play_button"
			android:layout_alignTop="@id/play_button"
			android:layout_alignEnd="@id/play_button"
			android:layout_alignBottom="@id/play_button"
			android:clickable="true"
			android:focusable="true"
			android:visibility="gone"
			tools:visibility="visible" />

		<ProgressBar
			android:id="@+id/add_answer_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignTop="@id/add_answer_button"
			android:layout_alignBottom="@id/add_answer_button"
			android:layout_toStartOf="@id/add_answer_button"
			android:clickable="true"
			android:focusable="true"
			android:visibility="gone"
			tools:visibility="visible" />

		<Button
			android:id="@+id/add_answer_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:drawableEnd="@drawable/ic_fiber_manual_record_red_500_36dp"
			android:padding="8dp"
			android:text="@string/answer" />

	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/submit_answer_layout"
		android:layout_width="match_parent"
		android:layout_height="?android:attr/listPreferredItemHeight"
		android:layout_below="@id/question_layout"
		android:visibility="gone"
		tools:visibility="visible">

		<Button
			android:id="@+id/cancel_answer_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:layout_toStartOf="@id/submit_answer_button"
			android:drawableEnd="@drawable/ic_clear_indigo_500_36dp"
			android:padding="8dp"
			android:text="@string/cancel" />

		<Button
			android:id="@+id/submit_answer_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:drawableEnd="@drawable/ic_done_indigo_500_36dp"
			android:padding="8dp"
			android:text="@string/save" />

		<ProgressBar
			android:id="@+id/submit_answer_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_centerVertical="true"
			android:clickable="true"
			android:focusable="true"
			android:visibility="gone"
			tools:visibility="visible" />

	</RelativeLayout>
</RelativeLayout>
